# bot-moderator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot_moderator/: config.py  main.py
bot_moderator/core/: actions.py  application.py  result.py
bot_moderator/data/: database.py
bot_moderator/handlers/: __init__.py  admin.py  callbacks.py  messages.py
bot_moderator/models/: entities.py  settings.py
bot_moderator/services/: admin_service.py  captcha_service.py  chat_service.py  container.py  join_request_service.py  moderation_service.py  user_service.py
bot_moderator/utils/: time.py
bot_moderator/web/: admin_models.py  admin_resources.py  server.py
bot_moderator/web/templates/: base.html  chat_detail.html  index.html
tests/: test_join_request_service.py  test_settings.py
